Remove theme switcher and enforce dark mode

--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/contact.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="">
+<html lang="en" data-theme="dark">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -54,7 +54,6 @@
         }
 
         /* Estilo del botón de cambio de tema */
-        .theme-toggle {
             position: fixed;
             top: 1.5rem;
             right: 1.5rem;
@@ -72,7 +71,6 @@
             justify-content: center;
         }
         @media (max-width: 767px) {
-            .theme-toggle {
                 top: 4rem;
                 right: 1rem;
                 width: 32px;
@@ -128,7 +126,6 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
             <div class="container px-5">
                 <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Rick Grisales</span></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
@@ -178,7 +175,6 @@
                                 <input type="hidden" name="_captcha" value="false">
                                 <!-- Submit Button -->
                                 <div class="d-grid">
-                                    <button class="btn btn-primary btn-lg" type="submit">Enviar</button>
                                 </div>
                             </form>
                         </div>
@@ -202,12 +198,6 @@
             </div>
         </div>
     </footer>
-    <!-- Theme toggle button -->
-    <button id="theme-toggle" class="theme-toggle" aria-label="Cambiar tema">
-        <span id="theme-icon">🌙</span>
-    </button>
-    <!-- Dark mode script -->
-    <script src="js/dark-mode.js"></script>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
