--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/resume.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/resume.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="">
+<html lang="en" data-theme="dark">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -56,7 +56,6 @@
         }
 
         /* Estilo del botón de cambio de tema */
-        .theme-toggle {
             position: fixed;
             top: 1.5rem;
             right: 1.5rem;
@@ -74,7 +73,6 @@
             justify-content: center;
         }
         @media (max-width: 767px) {
-            .theme-toggle {
                 top: 4rem;
                 right: 1rem;
                 width: 32px;
@@ -144,7 +142,6 @@
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
-                </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
@@ -314,11 +311,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
-    <!-- Theme toggle button -->
-    <button id="theme-toggle" class="theme-toggle" aria-label="Cambiar tema">
-        <span id="theme-icon">🌙</span>
-    </button>
-    <!-- Dark mode script -->
-    <script src="js/dark-mode.js"></script>
 </body>
 </html>
