--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/rhip.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/rhip.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es" data-theme="">
+<html lang="es" data-theme="dark">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -47,7 +47,6 @@
         }
 
         /* Estilo del botón de cambio de tema */
-        .theme-toggle {
             position: fixed;
             top: 1.5rem;
             right: 1.5rem;
@@ -65,7 +64,6 @@
             justify-content: center;
         }
         @media (max-width: 767px) {
-            .theme-toggle {
                 top: 4rem;
                 right: 1rem;
                 width: 32px;
@@ -196,7 +194,6 @@
             <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Rick Grisales</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
                 <span class="navbar-toggler-icon"></span>
-            </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
@@ -320,41 +317,8 @@
 <!-- Bootstrap core JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
-<!-- SCRIPT PARA MODO OSCURO -->
-<script>
-    const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
-    const userTheme = localStorage.getItem('theme');
-    if (userTheme) {
-        document.documentElement.setAttribute('data-theme', userTheme);
-    } else if (prefersDark) {
-        document.documentElement.setAttribute('data-theme', 'dark');
-    }
-    function toggleTheme() {
-        const currentTheme = document.documentElement.getAttribute('data-theme');
-        const newTheme = currentTheme === 'dark' ? 'light' : 'dark';
-        document.documentElement.setAttribute('data-theme', newTheme);
-        localStorage.setItem('theme', newTheme);
-        updateIcon(newTheme);
-    }
-    function updateIcon(theme) {
-        const icon = document.getElementById('theme-icon');
-        if (!icon) return;
-        icon.textContent = theme === 'dark' ? '☀️' : '🌙';
-    }
-    document.addEventListener('DOMContentLoaded', () => {
-        const button = document.getElementById('theme-toggle');
-        if (button) {
-            button.addEventListener('click', toggleTheme);
-            const current = document.documentElement.getAttribute('data-theme') || 'light';
-            updateIcon(current);
-        }
-    });
-</script>
 
-<!-- BOTÓN DE TEMA -->
-<button id="theme-toggle" class="theme-toggle" aria-label="Cambiar tema">
-    <span id="theme-icon">🌙</span>
-</button>
+
 
 </body>
 </html>
