--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/arte-naturaleza.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/arte-naturaleza.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans&display=swap" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet" />
     <style>
         /* Variables de color */
@@ -193,6 +194,43 @@
                 <li><strong>Precio:</strong> 6€ o gratis para clientes CaixaBank.</li>
                 <li><strong>Horarios:</strong> Todos los días, de 10 a 20 hrs.</li>
             </ul>
+
+            <div class="share-container" data-share-text="Del surrealismo a la crisis ecológica: Arte y naturaleza en diálogo">
+                <h2 class="share-title">Comparte este texto</h2>
+                <p class="share-description">Si te gustó, compártelo en tus redes sociales favoritas:</p>
+                <div class="share-buttons">
+                    <button type="button" class="share-button" data-share-network="facebook">
+                        <i class="bi bi-facebook"></i>
+                        <span>Facebook</span>
+                    </button>
+                    <button type="button" class="share-button" data-share-network="x">
+                        <i class="bi bi-twitter-x"></i>
+                        <span>X</span>
+                    </button>
+                    <button type="button" class="share-button" data-share-network="instagram">
+                        <i class="bi bi-instagram"></i>
+                        <span>Instagram</span>
+                    </button>
+                    <button type="button" class="share-button" data-share-network="linkedin">
+                        <i class="bi bi-linkedin"></i>
+                        <span>LinkedIn</span>
+                    </button>
+                    <button type="button" class="share-button" data-share-network="whatsapp">
+                        <i class="bi bi-whatsapp"></i>
+                        <span>WhatsApp</span>
+                    </button>
+                    <button type="button" class="share-button" data-share-network="telegram">
+                        <i class="bi bi-telegram"></i>
+                        <span>Telegram</span>
+                    </button>
+                    <button type="button" class="share-button" data-share-network="copy">
+                        <i class="bi bi-link-45deg"></i>
+                        <span>Copiar enlace</span>
+                    </button>
+                </div>
+                <p class="share-hint"><i class="bi bi-info-circle me-2"></i>Instagram no permite compartir enlaces automáticos, pero puedes pegar el enlace copiado en tus historias o mensajes.</p>
+                <p class="share-feedback" role="status" aria-live="polite"></p>
+            </div>
         </div>
     </section>
 </main>
@@ -213,5 +251,6 @@
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="js/scripts.js"></script>
 </body>
 </html>
