--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/poder-mentira.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/poder-mentira.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans&display=swap" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet" />
     <style>
         /* Variables de color */
@@ -222,6 +223,39 @@
             
             <p>Sin una solución o una respuesta que se asome in el horizonte, quizá el amor pueda ser una guía. Al igual que las emociones que nos manipulan, también apela a lo profundo de nuestra humanidad. Sin embargo, a diferencia del miedo o la indignación, el amor tiene el potencial de construir in lugar de destruir, de unir in lugar de fragmentar. Si bien el romanticismo puede ser emocionalidad, no es irracionalidad; es una elección consciente que puede guiar nuestros valores hacia el entendimiento y la empatía colectiva. In esta dicotomía de emociones, el amor puede ser el antídoto: no porque sea sencillo o idealizado, sino porque fomenta la empatía, la reflexión y, sobre todo, el compromiso con la verdad y con los otros. Carl Jung decía: “Donde el amor reina, no hay voluntad de poder; y donde el poder predomina, el amor falta”. Al final, lo que está in juego no es solo la verdad, sino nuestra capacidad de imaginar una democracia que sea resiliente in su imperfección. Y quizá ahí resida la clave: in reconocer que, aunque no podamos controlar todo, todavía podemos decidir cómo enfrentarlo.</p>
             <p class="highlight-quote">El amor puede ser el antídoto: no porque sea sencillo o idealizado, sino porque fomenta la empatía, la reflexión y, sobre todo, el compromiso con la verdad y con los otros.</p>
+
+            <div class="share-container" data-share-text="La política del engaño">
+                <h2 class="share-title">Comparte este texto</h2>
+                <p class="share-description">Si te gustó, compártelo en tus redes sociales favoritas:</p>
+                <div class="share-buttons">
+                    <button type="button" class="share-button" data-share-network="facebook">
+                        <i class="bi bi-facebook"></i>
+                        <span>Facebook</span>
+                    </button>
+                    <button type="button" class="share-button" data-share-network="x">
+                        <i class="bi bi-twitter-x"></i>
+                        <span>X</span>
+                    </button>
+                    <button type="button" class="share-button" data-share-network="linkedin">
+                        <i class="bi bi-linkedin"></i>
+                        <span>LinkedIn</span>
+                    </button>
+                    <button type="button" class="share-button" data-share-network="whatsapp">
+                        <i class="bi bi-whatsapp"></i>
+                        <span>WhatsApp</span>
+                    </button>
+                    <button type="button" class="share-button" data-share-network="telegram">
+                        <i class="bi bi-telegram"></i>
+                        <span>Telegram</span>
+                    </button>
+                    <button type="button" class="share-button" data-share-network="copy">
+                        <i class="bi bi-link-45deg"></i>
+                        <span>Copiar enlace</span>
+                    </button>
+                </div>
+                <p class="share-hint"><i class="bi bi-info-circle me-2"></i>¿Prefieres otra app? Copia el enlace y pégalo donde quieras.</p>
+                <p class="share-feedback" role="status" aria-live="polite"></p>
+            </div>
         </div>
     </section>
 </main>
@@ -242,5 +276,6 @@
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="js/scripts.js"></script>
 </body>
 </html>
